# Pop-Out-Motion

./: LICENSE  README.md  requirements.txt
bbw_calculation/: CMakeLists.txt  bbw.cpp  bbw.h  calc_bbw.cpp  sample_pt_handles.py
bbw_calculation/cmake/: FindLIBIGL.cmake  FindMOSEK.cmake
data_preprocessing/: CMakeLists.txt  calc_l_minv.cpp  normalize.cpp  preprocess_test_data.py  preprocess_train_data.py
data_preprocessing/cmake/: FindLIBIGL.cmake
network/: __init__.py  a_inference.py  train.py
network/config/: config.yaml
network/config/task_model/: lap_net.yaml
network/data/: DFAUSTLoader.py  __init__.py
network/models/: .lap_net.py.swp  __init__.py  base.py  lap_net.py
network/point_transformer_lib/point_transformer_ops/: point_transformer_modules.py
